make the VarargsParameter annotation optional